# ccapi-releases

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
sql/: init.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  tray-menu.json
src-tauri/icons/: icon.icns
src-tauri/src/: appid.rs  avatar.rs  codex.rs  config.rs  env_detect.rs  fsio.rs  installer.rs  lib.rs  main.rs  mode.rs  models.rs  monitor.rs  multiwindow.rs  notify.rs  paths.rs  proxy.rs  quota.rs  storage.rs  sys.rs  tray.rs  uninstaller.rs  version.rs
src-tauri/src/server/: audit.rs  auth.rs  billing.rs  captcha.rs  crypto.rs  db.rs  error.rs  export.rs  jwt_mw.rs  kv.rs  local_config.rs  mail.rs  mod.rs  permissions.rs  quota_hook.rs  relay.rs  router.rs
src-tauri/src/server/routes/: auth.rs  channels.rs  checkin.rs  codes.rs  config.rs  dashboard.rs  data_export.rs  health.rs  invites.rs  mail.rs  me.rs  mod.rs  models.rs  oauth.rs  orgs.rs  passkey.rs  prefill.rs  recharge.rs  roles.rs  site.rs  subscriptions.rs  tasks.rs  tiers.rs  tokens.rs  totp.rs  usage.rs  user_groups.rs  users.rs
src-tauri/src/server/transform/: mod.rs  param_override.rs  sensitive.rs
src/components/: BrandLogo.tsx  Captcha.tsx  ConfirmDialog.tsx  ConfirmHost.tsx  LanguageToggle.tsx  PromptDialog.tsx  PromptHost.tsx  ReconnectOverlay.tsx  SeamlessToggle.tsx  VersionBadge.tsx
src/components/Avatar/: Avatar.tsx  AvatarUploadModal.tsx
src/components/ClaudeCodePanel/: ClaudeCodePanel.tsx
src/components/ImportModal/: ImportModal.tsx
src/components/InstallGuide/: InstallGuide.tsx
src/components/KeyCard/: KeyCard.tsx
src/components/KeyForm/: KeyForm.tsx
src/components/Onboarding/: Onboarding.tsx
src/components/PreferencesPanel/: PreferencesPanel.tsx
src/components/ProxySourceCard/: ProxySourceCard.tsx
src/components/StatusBadge/: StatusBadge.tsx
src/components/ThemeToggle/: ThemeToggle.tsx
src/hooks/: useConfigFile.ts  useGSAPAnim.ts  useThemeTransition.ts
src/i18n/: index.ts  messages.ts
src/lib/: cn.ts  defaults.ts  format.ts  rotation.ts  status.ts
src/services/: apiClient.ts  apiMonitor.ts  claudeInstall.ts  configManager.ts  exportDownload.ts  importParser.ts  keyStore.ts  models.ts  notify.ts  tauri.ts  updater.ts
src/store/: useAppStore.ts  useAuthStore.ts  useClientStore.ts  useConfirmStore.ts  useModeStore.ts  usePromptStore.ts  useReconnectStore.ts  useServerInfoStore.ts  useServerStore.ts  useThemeStore.ts  useToastStore.ts  useUpdateStore.ts  useWorkspaceStore.ts
src/styles/: index.css
src/types/: auth.ts  index.ts
src/views/: Agents.tsx  Chat.tsx  Dashboard.tsx  Logs.tsx  McpServers.tsx  Rules.tsx  Settings.tsx  Skills.tsx  Tasks.tsx  Usage.tsx
(+67 files in other folders)
