[package]
name = "ccapi"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ccapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5"
chrono = { version = "0.4", features = ["clock", "serde"] }
regex = "1"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "macros", "time", "fs"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

# --- server mode (Phase 1+) ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "json", "macros", "bigdecimal"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
argon2 = "0.5"
jsonwebtoken = "9"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
futures-util = "0.3"
toml_edit = "0.22"
once_cell = "1"
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.79"
csv = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# 第 2/3 波：邮件 / 2FA
# lettre 用纯 rustls + smtp，与项目其它 rustls 一致；不拉 OpenSSL
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls", "hostname"] }
totp-rs = { version = "5", default-features = false, features = ["qr"] }
url = "2"
md-5 = "0.10"
# OAuth2 走自研最小实现（基于 reqwest + crypto 既有依赖）
# WebAuthn: 用纯 Rust 的 ciborium (CBOR) + p256 (ECDSA P-256) 不引大依赖
ciborium = "0.2"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation"] }

